# qwen3_supervised_fine_tuning

./: .gitignore  README.md  pyproject.toml
assets/: qwen3_base_eval.jsonl  qwen3_base_eval_analysis.txt  sft_qwen3_eval.jsonl  sft_qwen3_eval_analysis.txt
cs336_alignment/: evaluate_math.py  sft.py
notebooks/: sft_training_colab.ipynb
scripts/: download_math.py  download_model.py  run_math_eval.py  run_sft.py  verify_sft.py
